@@ -1,3 +1,7 @@
+kppInterface 1.5 released March 14, 2009
+
+	46. Update documentation and installation
+	
 kppInterface 1.4 released September 18, 2008
 
 	45. Exported Openfile code to ChppPlanner class and cleaned up notification 
